--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../public/css/tailwind.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <title>Platzi Travel</title>
 </head>
 <body>
-  <p>Holiwi</p>
-  <div class="w-64 h-64 bg-red-200"></div>
+  <p font-Montserrat text-xl>Holiwi</p>
+  <div class="w-64 h-64 bg-tertiary"></div>
 </body>
 </html>
