--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,28 @@
   <title>Platzi Travel</title>
 </head>
 <body>
-  <p font-Montserrat text-xl>Holiwi</p>
-  <div class="w-64 h-64 bg-tertiary"></div>
+  <header>
+    <nav></nav>
+    <div id="tabBar"></div>
+</header>
+<main>
+    <section class="w-full h-screen">
+        <div id="home"></div>
+        <div class="w-full h-3/4">
+          <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center">
+            <input class="outline-none p-3 rounded-full shadow-sm" placeholder="San Francisco" type="search" name="" id="">
+            <button class="w-32 rounded-full text-xl text-primary shadow-sm font-semibold p-4 bg-white">
+              Explorar
+            </button>
+          </div>
+          <div class="w-full h-full">
+            <img src="./img/sanFrancisco.jpg" alt="sanFrancisco">
+          </div>
+
+        </div>
+        <div id="recommendations"></div>
+        <div id="featured_rentals"></div>
+    </section>
+</main>
 </body>
 </html>
