--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../public/css/tailwind.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <title>Platzi Travel</title>
-</head>
-<body>
-  <header>
-    <nav></nav>
-    <div id="tabBar"></div>
-</header>
-<main>
-    <section class="w-full h-screen">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../public/css/tailwind.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <title>Platzi Travel</title>
+  </head>
+  <body>
+    <header>
+      <nav></nav>
+      <div id="tabBar"></div>
+    </header>
+    <main>
+      <section class="w-full h-screen">
         <div id="home"></div>
         <div class="w-full h-3/4">
           <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center">
-            <input class="outline-none p-3 rounded-full shadow-sm" placeholder="San Francisco" type="search" name="" id="">
+            <input class="outline-none p-3 rounded-full shadow-sm" placeholder="San Francisco" type="search" name="" id="" />
             <button class="w-32 rounded-full text-xl text-primary shadow-sm font-semibold p-4 bg-white">
               Explorar
             </button>
           </div>
           <div class="w-full h-full">
-            <img src="./img/sanFrancisco.jpg" alt="sanFrancisco">
+            <img src="./img/sanFrancisco.jpg" alt="sanFrancisco" />
           </div>
-
         </div>
-        <div id="recommendations"></div>
+        <div class="p-20" id="recommendations">
+          <div class="w-48 h-64 shadow-md rounded-lg">
+            <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+            <div class="bg-secondary w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
+              <p class="text-white text-bold text-xl">Norway</p>
+              <p class="text-white text-medium">Beautiful landscapes</p></div>
+          </div>
+        </div>
         <div id="featured_rentals"></div>
-    </section>
-</main>
-</body>
+      </section>
+    </main>
+  </body>
 </html>
