se agregan cards a recomendados

--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,52 @@
             <img src="./img/sanFrancisco.jpg" alt="sanFrancisco" />
           </div>
         </div>
-        <div class="p-20" id="recommendations">
-          <div class="Card">
-            <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
-            <div class="bg-secondary w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
-              <p class="text-white text-bold text-xl">Norway</p>
-              <p class="text-white text-medium">Beautiful landscapes</p></div>
+
+        <div class="p-6" id="recommendations">
+          <p class="text-3xl font-semibold text-primary">Recomendados</p>
+          <div class="w-auto h-72 items-cener mt-6 overflow-x-auto overscroll-x-contain flex space-x-6"> 
+            <div class="Card">
+              <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
+                <div class="bg-secondary w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
+                  <p class="text-white text-bold text-xl">Norway</p>
+                  <p class="text-white text-medium">Paisajes increaibles</p>
+                </div>
+              </div>
+              <div class="Card">
+              <div class="w-full h-3/5 rounded-t-lg bg-new_york bg-cover"></div>
+                <div class="bg-white w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
+                  <p class="text-tertiary text-bold text-xl">New York</p>
+                  <p class="text-tertiary text-medium">La gran manzana</p>
+                </div>
+              </div>
+              <div class="Card">
+                <div class="w-full h-3/5 rounded-t-lg bg-seattle bg-cover"></div>
+                  <div class="bg-secondary w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
+                    <p class="text-white text-bold text-xl">Seattle</p>
+                    <p class="text-white text-medium">Una ciudad para disfrutar al máximo</p>
+                  </div>
+                </div>
+                <div class="Card">
+                  <div class="w-full h-3/5 rounded-t-lg bg-switzerland bg-cover"></div>
+                    <div class="bg-white w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
+                      <p class="text-tertiary text-bold text-xl">Switzerland</p>
+                      <p class="text-tertiary text-medium">El mejor chocolate caliente que probarás</p>
+                    </div>
+                  </div>
+                  <div class="Card">
+                    <div class="w-full h-3/5 rounded-t-lg bg-yosemite bg-cover"></div>
+                      <div class="bg-secondary w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
+                        <p class="text-white text-bold text-xl">Yosemite</p>
+                        <p class="text-white text-medium">Un respiro del mundo</p>
+                      </div>
+                    </div>
+                    <div class="Card">
+                      <div class="w-full h-3/5 rounded-t-lg bg-europe bg-cover"></div>
+                        <div class="bg-white w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
+                          <p class="text-tertiary text-bold text-xl">Europe</p>
+                          <p class="text-tertiary text-medium">Castillos y tiempos medievales</p>
+                        </div>
+                      </div>
           </div>
         </div>
         <div id="featured_rentals"></div>
