--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     />
     <title>Platzi Travel</title>
   </head>
-  <body>
+
+  <body class="font-Montserrat">
     <header>
       <nav></nav>
       <div id="tabBar"></div>
@@ -22,8 +23,8 @@
         <div id="home"></div>
         <div class="w-full h-3/4">
           <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center">
-            <input class="outline-none p-3 rounded-full shadow-sm" placeholder="San Francisco" type="search" name="" id="" />
-            <button class="w-32 rounded-full text-xl text-primary shadow-sm font-semibold p-4 bg-white">
+            <input class="outline-none p-3 rounded-full shadow-sm transition duration-300 focus-within:shadow-sm focus:right-2 focus:w-11/12" placeholder="San Francisco" type="search" name="" id="" />
+            <button class="w-48 rounded-full text-lg text-primary shadow-sm font-semibold p-4 bg-white transition-all duration-500 ease-in-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110">
               Explorar
             </button>
           </div>
@@ -34,7 +35,7 @@
 
         <div class="p-6" id="recommendations">
           <p class="text-3xl font-semibold text-primary">Recomendados</p>
-          <div class="w-auto h-72 items-cener mt-6 overflow-x-auto overscroll-x-contain flex space-x-6"> 
+          <div class="w-auto h-72 items-cener mt-6 overflow-x-auto overscroll-x-contain flex space-x-6 overflow-y-hidden"> 
             <div class="Card">
               <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
                 <div class="bg-secondary w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
