--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
         <div class="p-6" id="recommendations">
           <p class="text-3xl font-semibold text-primary">Recomendados</p>
-          <div class="w-auto h-72 items-cener mt-6 overflow-x-auto overscroll-x-contain flex space-x-6 overflow-y-hidden"> 
+          <div class="w-auto h-80 lg:h-80 items-center mt-6 overflow-x-auto overscroll-x-contain flex space-x-4 lg:space-x-6 scrollbar"> 
             <div class="Card">
               <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
                 <div class="bg-secondary w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
@@ -74,13 +74,40 @@
                     <div class="Card">
                       <div class="w-full h-3/5 rounded-t-lg bg-europe bg-cover"></div>
                         <div class="bg-white w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
-                          <p class="text-tertiary text-bold text-xl">Europe</p>
+                          <p class="text-tertiary text-bold text-xl">Edinburgh</p>
                           <p class="text-tertiary text-medium">Castillos y tiempos medievales</p>
                         </div>
                       </div>
+                    <div class="Card">
+                      <div class="w-full h-3/5 rounded-t-lg bg-sydney bg-cover"></div>
+                        <div class="bg-secondary w-full h-2/5 flex items-center justify-center flex-col rounded-b-lg">
+                          <p class="text-white text-bold text-xl">Sydney</p>
+                          <p class="text-white text-medium">Conoce la famosísima Opera</p>
+                        </div>
+                      </div>  
           </div>
         </div>
-        <div id="featured_rentals"></div>
+        <div class="px-2 w-full h-full" id="featured_rentals">
+          <p class="text-3xl text-primary font-semibold pb-6 mt-6">Rentas Destacadas</p>
+          <div class="w-full h-full flex flex-col space-y-6 items-center justify-center">
+            <div class="w-full h-96 bg-chicago bg-cover rounded-xl ">
+              <p class="CardTitle">Chicago</p>
+              <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina</p>
+            </div>
+            <div class="w-full h-96 bg-LA bg-cover rounded-xl ">
+              <p class="CardTitle">Los Angeles</p>
+              <p class="text-sm pl-8 text-white mr-24">4 habitaciones, 3 baño, cocina y piscina privada</p>
+            </div>
+            <div class="w-full h-96 bg-miami bg-cover rounded-xl ">
+              <p class="CardTitle">Miami</p>
+              <p class="text-sm pl-8 text-white mr-24">3 habitaciones, 2 baños, cocina y excelente vista al mar</p>
+            </div>
+            <div class="w-full h-96 bg-bali bg-cover rounded-xl ">
+              <p class="CardTitle">Bali</p>
+              <p class="text-sm pl-8 text-white mr-24">4 habitaciones, 3 baño, cocina y piscina privada</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
