--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
                       </div>  
           </div>
         </div>
-        <div class="px-2 w-full h-full" id="featured_rentals">
+        <div class="px-2 w-full h-auto" id="featured_rentals">
           <p class="text-3xl text-primary font-semibold pb-6 mt-6">Rentas Destacadas</p>
           <div class="w-full h-full flex flex-col space-y-6 items-center justify-center">
             <div class="w-full h-96 bg-chicago bg-cover rounded-xl ">
@@ -107,6 +107,33 @@
               <p class="text-sm pl-8 text-white mr-24">4 habitaciones, 3 baño, cocina y piscina privada</p>
             </div>
           </div>
+        </div>
+
+        <div class="w-full h-full" id="faqs">
+          <div class="w-full h-full px-6 flex flex-col space-y-4">
+            <p class="text-3xl text-primary font-semibold mt-6">FAQS</p>
+            <div>
+              <p class="text-xl text-primary font-medium">Política de Cancelación</p>
+              <p class="text-md pt-2">Para estancias menores a una semana es importante avisar con 3 días de	anticipación, de caso contario será sancionado.</p>
+            </div>
+            <div>
+              <p class="text-xl text-primary font-medium">Métodos de pago</p>
+              <p class="text-md pt-2">Aceptamos distintos métodos de pago: VISA, MasterCard, American Express, Paypal y Binance</p>
+            </div>
+            <div>
+              <p class="text-xl text-primary font-medium">Mascotas</p>
+              <p class="text-md pt-2">El tema de las mascotas dependerá directamente del anfitrión.</p>
+            </div>
+            <div>
+              <p class="text-xl text-primary font-medium">Información de Seguridad</p>
+              <p class="text-md pt-2">Todas nuestras estancias cuentan con seguro en caso de accidentes</p>
+            </div>
+            <div>
+              <p class="text-xl text-primary font-medium">Estancias Largas</p>
+              <p class="text-md pt-2">Contamos con estancias de hasta 3 meses, en este caso es requerido un anticipo con un monto del 50% del valor de la renta</p>
+            </div>
+            
+          </div>          
         </div>
       </section>
     </main>
