--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       <div id="tabBar"></div>
     </header>
     <main>
-      <section class="w-full h-screen">
+      <section class="w-full h-auto">
         <div id="home"></div>
         <div class="w-full h-3/4">
           <div class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center">
@@ -136,6 +136,14 @@
           </div>          
         </div>
       </section>
+      <footer class="w-full h-auto bg-gray-50 p-6 space-y-2">
+        <p class="text-lg">Acerca De</p>
+        <p class="text-sm text-gray-300">Inversionistas</p>
+        <p class="text-sm text-gray-300">Empleos</p>
+        <p class="text-sm text-gray-300">Términos y condiciones</p>
+        <p class="text-sm text-gray-300">Platzi Travel, Inc.</p>
+
+      </footer>
     </main>
   </body>
 </html>
