--- a/public/index.html
+++ b/public/index.html
@@ -91,26 +91,32 @@
                       </div>  
           </div>
         </div>
-        <div class="px-2 w-full h-auto" id="featured_rentals">
+        <div class="px-2 w-full h-auto lg:px-6" id="featured_rentals">
           <p class="text-3xl text-primary font-semibold pb-6 mt-6">Rentas Destacadas</p>
-          <div class="w-full h-full flex flex-col space-y-6 items-center justify-center">
+          <div class="w-full h-full flex flex-col items-center justify-center">
 
-            <div class="w-full h-96 bg-chicago bg-cover rounded-xl ">
-              <p class="CardTitle">Chicago</p>
-              <p class="text-sm pl-8 text-black mr-24">2 habitaciones, baño y cocina</p>
+            <div class="w-full h-96 bg-chicago bg-cover rounded-xl mb-8 lg:bg-center">
+              <p class="CardTitle lg:text-black">Chicago</p>
+              <p class="text-sm pl-8 text-black mr-24 lg:text-lg">2 habitaciones, baño y cocina</p>
             </div>
-            <div class="w-full h-96 bg-LA bg-cover rounded-xl ">
-              <p class="CardTitle">Los Angeles</p>
-              <p class="text-sm pl-8 text-white mr-24">4 habitaciones, 3 baño, cocina y piscina privada</p>
+
+            <div class="lg:flex lg:h-full lg:w-full lg:space-x-4">
+              <div class="w-full h-96 bg-LA bg-cover rounded-xl mb-8 lg:h-auto">
+                <p class="CardTitle">Los Angeles</p>
+                <p class="text-sm pl-8 text-white mr-24 lg:text-lg">4 habitaciones, 3 baño, cocina y piscina privada</p>
+              </div>
+              <div class="h-full w-full">
+                <div class="w-full h-96 bg-miami bg-cover rounded-xl mb-8">
+                  <p class="CardTitle">Miami</p>
+                  <p class="text-sm pl-8 text-white mr-24 lg:text-lg">3 habitaciones, 2 baños, cocina y excelente vista al mar</p>
+                </div>
+                <div class="w-full h-96 bg-bali bg-cover rounded-xl mb-8">
+                  <p class="CardTitle">Bali</p>
+                  <p class="text-sm pl-8 text-white mr-24 lg:text-lg">4 habitaciones, 3 baño, cocina y piscina privada</p>
+                </div>
+              </div>
             </div>
-            <div class="w-full h-96 bg-miami bg-cover rounded-xl ">
-              <p class="CardTitle">Miami</p>
-              <p class="text-sm pl-8 text-white mr-24">3 habitaciones, 2 baños, cocina y excelente vista al mar</p>
-            </div>
-            <div class="w-full h-96 bg-bali bg-cover rounded-xl ">
-              <p class="CardTitle">Bali</p>
-              <p class="text-sm pl-8 text-white mr-24">4 habitaciones, 3 baño, cocina y piscina privada</p>
-            </div>
+
           </div>
         </div>
 
